--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,15 @@
 spring.application.name=s3-example
+spring.profiles.active=local
 
 ## Server Properties
 server.port= 8085
 
-### upload ###
-file.storage-type=STORAGE_S3
-#Local
-file.upload-dir=media
-#ftp
-file.ftp.server=103.47.194.240
-file.ftp.port=21
-file.ftp.username=a
-file.ftp.password=a
 #s3
 s3.access.key=
 s3.secret.key=
-s3.bucket=portal
-#s3.region=ap-southeast-1
-#s3.region=vn-central-1
-#s3.region=us-east-1
-s3.endpoint=https://vcos.cloudstorage.com.vn
+s3.bucket=
+s3.region=ap-southeast-1
+s3.endpoint=
 
 ## Jackson Properties
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS= false
