--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,25 @@
 spring.application.name=s3-example
-spring.profiles.active=local
+#spring.profiles.active=local
 
 ## Server Properties
 server.port= 8085
 
+### upload ###
+file.storage-type=STORAGE_S3
+#Local
+file.upload-dir=media
+#ftp
+file.ftp.server=103.47.194.240
+file.ftp.port=21
+file.ftp.username=a
+file.ftp.password=a
 #s3
-s3.access.key=
-s3.secret.key=
-s3.bucket=
-s3.region=ap-southeast-1
-s3.endpoint=
+spring.config.import=optional:file:.env[.properties]
+s3.access.key=${S3_ACCESS_KEY}
+s3.secret.key=${S3_SECRET_KEY}
+s3.bucket=${S3_BUCKET}
+s3.region=${S3_REGION}
+s3.endpoint=${S3_ENDPOINT}
 
 ## Jackson Properties
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS= false
